src/App.css
.App .repos {
  display: flex;
  flex-direction: row;
}

.App .repo-list {
  display: flex;
  flex-direction: column;
}

.App .repo-list ul {
  list-style-type: none;
}

.App .repo-list h3 {
  padding-left: 5px;
}

.App .repo-list .repository {
  padding: 5px;
  font-size: 15px;
  border: 1px solid #8427A2;
  border-radius: 2px;
  width: 150px;
}

.App .repository-issues .issues {
  list-style-type: none;
  border: 1px solid #8427A2;
  border-radius: 2px;
  margin-left: 15px;
  padding: 0px;
}

.App .repository-issues .issues .issue {
  border: 1px solid #8427A2;
  padding: 15px;
}

.App .configuration.visible {
  display: flex;
  flex-direction: row;
}

.App .configuration.hidden {
  display: none;
}

